[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/StarterWeaponSelect.gd" id="1_starter"]

[node name="StarterWeaponSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_starter")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.04, 0.08, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 32
text = "Choose Your Starter Weapon"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="WardenInfo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Warden: Veteran | HP: 50 | Energy: 1/turn | Draw: 1/turn"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "You start with just this weapon. Build your arsenal through the shop!"
horizontal_alignment = 1

[node name="WeaponContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
disabled = true
text = "Start Run"

[node name="WeaponPreview" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -280.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="PreviewContent" type="VBoxContainer" parent="WeaponPreview"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PreviewName" type="Label" parent="WeaponPreview/PreviewContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 22
text = "Weapon Name"
horizontal_alignment = 1

[node name="PreviewEffect" type="RichTextLabel" parent="WeaponPreview/PreviewContent"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true
text = "[b]Effect:[/b] Description here"

[node name="PreviewSynergy" type="Label" parent="WeaponPreview/PreviewContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Synergy: Build hint here"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
